cleanup some mess
